Visualization map and current location of the user.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 <script src="modules/chat/chat.js"></script>
 <script src="modules/videocall/videocall.js"></script>
 <script src="modules/start/start.js"></script>
+<script src="modules/map/map.js"></script>
 
 <script src="modules/core/config/core.routes.js"></script>
 <script src="modules/register/config/register.routes.js"></script>
@@ -96,6 +97,7 @@
 <script src="modules/contacts/config/routes.js"></script>
 <script src="modules/videocall/config/routes.js"></script>
 <script src="modules/start/config/start.routes.js"></script>
+<script src="modules/map/config/map.routes.js"></script>
 
 <script src="modules/core/services/home.service.js"></script>
 <script src="modules/register/services/register.service.js"></script>
@@ -107,6 +109,7 @@
 <script src="modules/contacts/controllers/contacts.js"></script>
 <script src="modules/videocall/controllers/videocall.js"></script>
 <script src="modules/start/controllers/start.controller.js"></script>
+<script src="modules/map/controllers/map.controller.js"></script>
 <!-- endinjector -->
 <!-- endbuild -->
 
